Update Flask/01_20_실시간 강의 정리.md

--- a/Flask/01_20_실시간 강의 정리.md
+++ b/Flask/01_20_실시간 강의 정리.md
@@ -134,4 +134,80 @@ print(check_password_hash(fried_chicken_1, chicken)) # 치킨으로 프라이드
 print(check_password_hash(fried_chicken_2, name))
 ```
 
+# AJAX : 인증, 토큰과 관련
 
+# Local 개발 환경 구축하기
+
+## 프로젝트 폴더 구조 – elice_flask_board 패키지를 구성
+```
+/elice_flask_board
+  /static # css, js 파일이 저장되는 공간
+    style.css # 웹 페이지의 스타일 코드(CSS)
+  /templates # html 파일이 저장되는 공간
+    /auth # 로그인 관련 html 파일이 저장되는 공간
+      login.html # 로그인 화면
+      register.html # 회원가입 화면
+    /board # 게시판 관련 html이 저장되는 공간
+      /create.html # 게시글 생성 화면
+      /index.html # 게시글 조회 화면
+      /update.html # 게시글 수정 화면
+    base.html # 모든 html의 header
+  auth.py # 로그인 관련 기능을 구현하는 모듈
+  board.py # 게시판 관련 기능을 구현하는 모듈
+  db.py # 데이터베이스 관련 기능을 구현하는 모듈
+  schema.sql # 데이터베이스 스키마를 저장
+  __init__.py # 웹 애플리케이션을 실행하는 모듈
+```
+
+## 데이터베이스 스키마 만들기
+
+> flask_project/elice_flask_board/db.sql
+
+```
+drop table if exists board;
+
+create table board (
+  id integer primary key autoincrement,
+  title text not null,
+  ‘text’ text not null
+);
+```
+
+## 애플리케이션 설정하기
+
+```
+# Flask 애플리케이션 인스턴스 생성
+# app.instance_path와 관련된 옵션을 True로 설정
+app = Flask(__name__, instance_relative_config=True)
+
+# Flask 애플리케이션 개발을 위한 KEY와 DATABASE 선언
+app.config.from_mapping(
+  SECRET_KEY='dev',
+  # app.instance_path 는 외부로 유출되면 안되는 정보를 저장한다.
+  DATABASE=os.path.join(app.instance_path, \
+    'elice_flask_board.sqlite'),
+)
+
+if test_config is None:
+  # 테스트를 실행하지 않을 때, 인스턴스의 설정을 불러옵니다.
+  app.config.from_pyfile('config.py', silent=True)
+else:
+  # 테스트를 실행했을 때
+  app.config.from_mapping(test_config)
+
+# 인스턴스 폴더가 있는지 확인합니다. 없다면 에러가 발생합니다.
+try:
+  os.makedirs(app.instance_path)
+except OSError:
+  pass
+```
+
+## 라우팅 설정하기
+
+> 라우팅이란 사용자가 특정 URL로 접속했을 때, 특정 정보나 페이지를 보여줄 수 있도록 설정하는 것을 뜻함
+
+```
+@app.route(‘/hello')
+def hello():
+  return 'Hello, Elice!'
+```
