Update Flask/01_20_실시간 강의 정리.md

--- a/Flask/01_20_실시간 강의 정리.md
+++ b/Flask/01_20_실시간 강의 정리.md
@@ -158,6 +158,26 @@ print(check_password_hash(fried_chicken_2, name))
   schema.sql # 데이터베이스 스키마를 저장
   __init__.py # 웹 애플리케이션을 실행하는 모듈
 ```
+```
+├── elice_flask_board/
+│   ├── __init__.py
+│   ├── db.py
+│   ├── schema.sql
+│   ├── auth.py
+│   ├── blog.py
+│   ├── hello.py
+│   ├── templates/
+│   │   ├── base.html
+│   │   ├── auth/
+│   │   │   ├── login.html
+│   │   │   └── register.html
+│   │   └── blog/
+│   │       ├── create.html
+│   │       ├── index.html
+│   │       └── update.html
+│   └── static/
+│       └── style.css
+```
 
 ## 데이터베이스 스키마 만들기
 
@@ -210,4 +230,139 @@ except OSError:
 @app.route(‘/hello')
 def hello():
   return 'Hello, Elice!'
+```
+
+### __init__.py
+
+```
+import os
+
+from flask import Flask
+
+
+def create_app(test_config=None):
+    # 웹 애플리케이션을 만들고 설정합니다.
+    
+
+    # Flask 인스턴스를 만듭니다. 
+    app = Flask(__name__, instance_relative_config=True)
+    # __name__은 현재 python 모듈의 이름입니다. 
+    # Flask 앱은 일부 경로를 설정하기 위해 위치를 알아야하며,
+    # __name__을 통해 알려주는 방법은 아주 편리한 방법입니다.
+
+    # instance_relative_config=True 코드는 구성 파일이 인스턴스 폴더에 
+    # 상대적인 위치를 가지고 있다고 앱에 알리는 역할을 합니다.
+    # 인스턴스 폴더는 elice_flask_board 폴더 외부에 있으며 애플리케이션의 보안을 위해 데이터베이스와 같이 
+    # 원격 저장소(Git)에 파일이 커밋되지 않아야하는 로컬 데이터를 저장할 수 있습니다.
+    
+    # Flask 웹 애플리케이션에서 사용할 키와 데이터베이스를 설정합니다.
+    app.config.from_mapping(
+        SECRET_KEY='dev',
+        DATABASE=os.path.join(app.instance_path, 'elice_flask_board.sqlite'),
+    )
+    # SECRET_KEY='dev' 현재 개발 중이라는 표시입니다. 
+    # 나중에 배포시 임의의 값으로 수정되어야 합니다.
+    # DATABASE는 SQLITE3를 사용합니다.
+    
+    if test_config is None:
+        # 테스트를 실행하지 않을 때, 인스턴스의 설정을 불러옵니다.
+        app.config.from_pyfile('config.py', silent=True)
+    else:
+        # 테스트를 실행했을 때
+        app.config.from_mapping(test_config)
+
+    # 인스턴스 폴더가 있는지 확인합니다. 없다면 에러가 발생합니다.
+    try:
+        os.makedirs(app.instance_path)
+    except OSError:
+        pass
+
+
+    @app.route('')
+    def hello():
+        return 'Hello, Elice!'
+
+    return app
+```
+
+## DB 연동하기
+
+> Sqlite3는 관계형 데이터베이스로 python에 내장되어 있습니다. 별도의 데이터베이스 서버를 설정할 필요가 없어 사용하기 편리합니다.
+
+### 필요한 모듈 불러오기
+
+```
+import sqlite3 # sqlite3 불러오기
+import click # click 불러오기
+from flask import current_app, g # current_app, g 모듈 불러오기
+from flask.cli import with_appcontext # with_appcontext 모듈 불러오기
+```
+
+#### click 패키지
+
+> 여러분이 원하는 shell command를 만들어 사용할 수 있습니다. 데이터베이스 서버, 테스팅 서버, 플라스크 서버 등을 분리하여 실행할 수 있습니다.
+다양한 서버에서 원하는 서버만 실행이 되도록 한다.
+
+```
+# shell 환경에서 ‘hello_elice’ 입력 시, 화면에 “Hello Elice!!” 출력
+@click.command(‘hello_elice’)
+def func():
+  click.echo(“Hello Elice!!”)
+```
+
+#### current_app 모듈
+
+> current_app 모듈은 현재 애플리케이션을 뜻합니다. 즉, 현재 flask 웹 애플리케이션에 대한 설정 및 파일 접근을 할 수 있게 해줍니다.
+
+```
+# 현재 애플리케이션의 파일을 열어줌
+current_app.open_resourse(‘schema.sql’)
+
+# 현재 애플리케이션의 데이터베이스 설정을 할 수 있음
+current_app.config[‘DATABASE’]
+```
+
+#### g 모듈
+
+```
+def get_db():
+  if 'db' not in g:
+    g.db = sqlite3.connect(
+      current_app.config['DATABASE'],
+      detect_types=sqlite3.PARSE_DECLTYPES
+    )
+    g.db.row_factory = sqlite3.Row
+  return g.db
+```
+
+#### with_appcontext 모듈
+with_appcontext 모듈은 웹 애플리케이션이 실행 중이 아니고
+서버에 특정 요청을 보내야 하는 상황에서
+웹 애플리케이션과 상호작용하고자 할 때 사용합니다.
+예시로 flask 웹 애플리케이션이 실행 중이 아닐 때
+데이터베이스를 가동해야하는 상황에서 사용할 수 있습니다.
+
+### shell에서 파이썬 코드 실행하기!
+
+- click 패키지와 with_appcontext 모듈을 사용해서 플라스크 웹 애플리케이션이 동작 중이지 않을 때 데이터베이스를 실행하는 명령어를 만드는 코드
+
+```
+@click.command('init-db')
+@with_appcontext
+def init_db_command():
+  # 이전에 데이터를 전부 비우고 새로운 데이터베이스를 생성하여 연결하는 함수
+  init_db()
+  click.echo('Initialized the database.')
+```
+
+### shell 명령어 사용 예시
+
+> Bash shell에서 명령어를 순차적으로 실행하여 데이터베이스와 웹 서버를 실행
+
+```
+# bash shell
+$export FLASK_APP=elice_flask_board # 프로젝트 이름
+$export FLASK_ENV=development # 기본 값은 production
+$init-db # 데이터베이스 서버 실행
+$flask run # 플라스크 서버 실행
 ```
