Update Flask/01_20_실시간 강의 정리.md

--- a/Flask/01_20_실시간 강의 정리.md
+++ b/Flask/01_20_실시간 강의 정리.md
@@ -366,3 +366,157 @@ $export FLASK_ENV=development # 기본 값은 production
 $init-db # 데이터베이스 서버 실행
 $flask run # 플라스크 서버 실행
 ```
+
+## DB 연동 전체 코드 
+
+> 실행순서
+
+1. init.py 폴더에서
+2. db.init_app 호출
+
+3. db.init_app은
+  - 앱이 꺼지면 db도 끔
+  - init-db command 설정
+
+4. init-db 코맨드 들어옴
+5. init_db_command 실행
+6. init_db 실행
+7. get_db 실행
+
+> db.py
+
+```
+import sqlite3
+
+import click
+from flask import current_app, g
+from flask.cli import with_appcontext
+
+# 데이터베이스 연결하기
+def get_db():
+    # g 객체에 db가 없다면?
+    if 'db' not in g:
+        # sqlite3를 불러옵니다.
+        g.db = sqlite3.connect(
+            # 현재 애플리케이션의 데이터베이스로 설정
+            current_app.config['DATABASE'],
+            # 반환되는 각 row에 대해 선언된 형을 구문분석
+            detect_types=sqlite3.PARSE_DECLTYPES
+        )
+        # 튜플 형식이 아닌 접근하는 데이터를 dictionary 타입과 비슷하게 키-값 쌍으로 사용할 수 있게 해줌
+        g.db.row_factory = sqlite3.Row
+
+    return g.db
+
+# 데이터베이스 연결 종료하기
+def close_db(e=None):
+    # 글로벌 객체인 g에서 db를 추출, db를 찾아 지움
+    # g에 내장된 pop메서드이기 때문에 파이썬의 pop과는 다르다.
+    db = g.pop('db', None)
+
+    # db가 있다면 db를 종료
+    if db is not None:
+        db.close()
+
+# 웹 어플리케이션 등록하기
+def init_db(): # DB의 구조만들기
+    db = get_db() # bd 만들기
+
+    # schema.sql의 파일을 열어 query를 실행
+    with current_app.open_resource('schema.sql') as f: # f에 잠시 저장
+        db.executescript(f.read().decode('utf8'))
+
+
+# init-db 명령어를 shell에서 실행한다면 함수를 실행
+@click.command('init-db')
+@with_appcontext
+def init_db_command(): # command를 입력했을 때 init_db를 실행해주는 함수
+    init_db()
+    click.echo('Initialized the database.')
+
+def init_app(app): # 웹 애플리케이션에 등록하기 위한 함수
+    # HTTP 요청이 완료되면 실행
+    app.teardown_appcontext(close_db)
+    # 새로운 shell 명령어를 추가
+    app.cli.add_command(init_db_command)
+```
+
+> schema.sql
+
+```
+DROP TABLE IF EXISTS user;
+DROP TABLE IF EXISTS post;
+
+CREATE TABLE user (
+  id INTEGER PRIMARY KEY AUTOINCREMENT,
+  username TEXT UNIQUE NOT NULL,
+  password TEXT NOT NULL
+);
+
+CREATE TABLE board (
+  id INTEGER PRIMARY KEY AUTOINCREMENT,
+  author_id INTEGER NOT NULL,
+  created TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
+  title TEXT NOT NULL,
+  body TEXT NOT NULL,
+  FOREIGN KEY (author_id) REFERENCES user (id)
+);
+```
+
+> __init__.py
+
+```
+import os
+
+from flask import Flask
+
+
+def create_app(test_config=None):
+    # 웹 애플리케이션을 만들고 설정합니다.
+    
+
+    # Flask 인스턴스를 만듭니다. 
+    app = Flask(__name__, instance_relative_config=True)
+    # __name__은 현재 python 모듈의 이름입니다. 
+    # Flask 앱은 일부 경로를 설정하기 위해 위치를 알아야하며,
+    # __name__을 통해 알려주는 방법은 아주 편리한 방법입니다.
+
+    # instance_relative_config=True 코드는 구성 파일이 인스턴스 폴더에 
+    # 상대적인 위치를 가지고 있다고 앱에 알리는 역할을 합니다.
+    # 인스턴스 폴더는 elice_flask_board 폴더 외부에 있으며 애플리케이션의 보안을 위해 데이터베이스와 같이 
+    # 원격 저장소(Git)에 파일이 커밋되지 않아야하는 로컬 데이터를 저장할 수 있습니다.
+    
+    # Flask 웹 애플리케이션에서 사용할 키와 데이터베이스를 설정합니다.
+    app.config.from_mapping(
+        SECRET_KEY='dev',
+        DATABASE=os.path.join(app.instance_path, 'elice_flask_board.sqlite'),
+    )
+    # SECRET_KEY='dev' 현재 개발 중이라는 표시입니다. 
+    # 나중에 배포시 임의의 값으로 수정되어야 합니다.
+    # DATABASE는 SQLITE3를 사용합니다.
+    
+    if test_config is None:
+        # 테스트를 실행하지 않을 때, 인스턴스의 설정을 불러옵니다.
+        app.config.from_pyfile('config.py', silent=True)
+    else:
+        # 테스트를 실행했을 때
+        app.config.from_mapping(test_config)
+
+    # 인스턴스 폴더가 있는지 확인합니다. 없다면 에러가 발생합니다.
+    try:
+        os.makedirs(app.instance_path)
+    except OSError:
+        pass
+
+    @app.route('/hello')
+    def hello():
+        return 'Hello, Elice!'
+    
+    
+    # 데이터베이스를 불러옵니다.
+    # __init__.py 파일을 열어 웹 애플리케이션이 실행 될 때, 데이터베이스를 초기화하는 구문
+    from . import db
+    db.init_app(app)
+    
+    return app
+```
