Update Flask/01_20_실시간 강의 정리.md

--- a/Flask/01_20_실시간 강의 정리.md
+++ b/Flask/01_20_실시간 강의 정리.md
@@ -420,7 +420,7 @@ def close_db(e=None):
 
 # 웹 어플리케이션 등록하기
 def init_db(): # DB의 구조만들기
-    db = get_db() # bd 만들기
+    db = get_db() # bd 만들기, db를 가져와서 구조를 만들어주는 것.
 
     # schema.sql의 파일을 열어 query를 실행
     with current_app.open_resource('schema.sql') as f: # f에 잠시 저장
@@ -431,13 +431,15 @@ def init_db(): # DB의 구조만들기
 @click.command('init-db')
 @with_appcontext
 def init_db_command(): # command를 입력했을 때 init_db를 실행해주는 함수
-    init_db()
-    click.echo('Initialized the database.')
+    init_db() # db를 가져와 구조를 설정함.
+    click.echo('Initialized the database.') # 관리자에게 db가 성공적으로 초기화 되었는지 알림
 
 def init_app(app): # 웹 애플리케이션에 등록하기 위한 함수
-    # HTTP 요청이 완료되면 실행
+    # HTTP 요청이 완료되면 실행, 앱이 종료되면 db를 닫는다고 설정
     app.teardown_appcontext(close_db)
     # 새로운 shell 명령어를 추가
+    # cli : command line interface
+    # () 안의 함수를 실행할 수 있는 명령어를 실행한다.(해당 함수를 shell에서 실행할 수 있도록 알려준다.)
     app.cli.add_command(init_db_command)
 ```
 
