Update Flask/01_20_실시간 강의 정리.md

--- a/Flask/01_20_실시간 강의 정리.md
+++ b/Flask/01_20_실시간 강의 정리.md
@@ -428,7 +428,7 @@ def init_db(): # DB의 구조만들기
 
 
 # init-db 명령어를 shell에서 실행한다면 함수를 실행
-@click.command('init-db')
+@click.command('init-db') # 쉘에서 init-db를 입력했을 때 실행해준다. app.cli.add_command과 연관해서 생각하기.
 @with_appcontext
 def init_db_command(): # command를 입력했을 때 init_db를 실행해주는 함수
     init_db() # db를 가져와 구조를 설정함.
@@ -439,7 +439,7 @@ def init_app(app): # 웹 애플리케이션에 등록하기 위한 함수
     app.teardown_appcontext(close_db)
     # 새로운 shell 명령어를 추가
     # cli : command line interface
-    # () 안의 함수를 실행할 수 있는 명령어를 실행한다.(해당 함수를 shell에서 실행할 수 있도록 알려준다.)
+    # () 안의 함수를 실행할 수 있는 명령어를 실행한다.(해당 함수를 shell에서 실행할 수 있다고 알려준다.)
     app.cli.add_command(init_db_command)
 ```
 
@@ -517,7 +517,7 @@ def create_app(test_config=None):
     
     # 데이터베이스를 불러옵니다.
     # __init__.py 파일을 열어 웹 애플리케이션이 실행 될 때, 데이터베이스를 초기화하는 구문
-    from . import db
+    from . import db # . 은 현재폴더를 의미한다. 현재 폴더 내 db.py를 import한다. 인터넷에 있는 파일이 아닌, 자신이 작성한 파이썬 파일이라는 것을 알 수 있도록 한다.
     db.init_app(app)
     
     return app
