--- a/Flask/01_20_실시간 강의 정리.md
+++ b/Flask/01_20_실시간 강의 정리.md
@@ -522,3 +522,461 @@ def create_app(test_config=None):
     
     return app
 ```
+
+# 블루 프린트와 로그인
+
+## 소스가 거대해지고 있을 때 
+
+flask는 한 모듈에서 웹 서버를 전부 구동할 수 있게끔 구성할 수도 있습니다.
+하지만 점점 코드가 많아질 수록 유지보수 측면에서 매우 좋지 않고
+점점 더 각 코드의 역할을 구분하기 힘들어질 겁니다.
+이때 블루프린트를 사용하여 코드를 효율적으로 관리할 수 있습니다.
+
+## 블루프린트를 사용하는 이유
+
+블루프린트는 웹 애플리케이션에 등록할 수 있는 청사진, 경로, 기타 앱 관련 기능을 나타냅니다.
+블루 프린트는 웹 애플리케이션의 개체를 사전에 요구하지 않고 기능을 정의할 수 있습니다.
+무엇보다 모듈을 여러 개로 나누어 효과적으로 개발 및 유지보수 할 수 있도록 해줍니다
+
+## 사용방법
+
+```
+from flask import Blueprint
+
+# 블루프린트 객체 생성
+bp = Bluprint(“hello”, __name__, url_prefix=“/hello”)
+
+# app.route 데코레이터가 아닌 bp.route로 선언
+@bp.route(‘/’) # hello_elice() 함수가 실행되기 전에 bp.route라는 함수를 먼저 실행
+def hello_elice():
+  return ‘Hello, Elice!
+```
+
+## 데코레이터란?
+
+데코레이터(Decorator)란 특정 함수가 실행되기 전에 먼저 실행되는 함수를 말합니다.
+즉 특정 함수가 실행되기 전에 다른 함수를 먼저 실행하는 방법입니다.
+URL 라우팅을 할 때 사용한 @app.route()가 가장 대표적인 예시입니다.
+
+## 세션이란?
+
+로그인 기능을 만들기 위해 session이라는 개념을 알아야합니다.
+session이란 웹 사이트에서 사용자의 정보를 저장하는 방법을 의미합니다.
+즉. 사용자가 로그인을 한 시점에서부터 로그아웃을 하는
+시점까지를 session이라고 부릅니다.
+
+## flask에서의 session
+
+```
+# user[‘id’]에 등록된 정보를 session에 등록합니다.
+session['user_id'] = user['id']
+
+# 현재 session에 등록된 유저의 정보를 획득합니다.
+user_id = session.get('user_id')
+
+# session을 비웁니다.
+session.clear()
+```
+
+## 블루프린트 로그인 소스 코드
+
+> auth.py
+
+```
+# auth 블루프린트를 생성하세요.
+import functools
+
+from flask import Blueprint
+from flask import flash
+from flask import g
+from flask import redirect
+from flask import render_template
+from flask import request
+from flask import session
+from flask import url_for
+from werkzeug.security import check_password_hash
+from werkzeug.security import generate_password_hash
+
+from elice_flask_board.db import get_db
+
+# 블루프린트 생성!
+bp = Blueprint("auth", __name__, url_prefix="/auth")
+
+# 회원가입 기능 만들기
+# 사용자가 /auth/register URL로 접속하면 회원가입을 할 수 있게끔 만들어야 합니다.
+# 또한 유저가 회원가입 양식을 제출하면 입력 내용을 확인하고 오류 메세지와 함께 회원가입 페이지를 다시 호출하거나, 회원 가입 수행 후 로그인 페이지로 이동하게 코드를 구성합니다.
+
+# /register 주소에서 GET과 POST 메소드 방식의 요청을 모두 받음
+@bp.route('/register', methods=('GET', 'POST'))
+def register():
+    # POST 요청을 받았다면?
+    if request.method == 'POST':
+        # 아이디와 비밀번호를 폼에서 가져옵니다.
+        username = request.form['username']
+        password = request.form['password']
+        db = get_db()
+        error = None
+
+        # 아이디가 없다면?
+        if not username:
+            error = 'Username이 유효하지 않습니다.'
+        # 비밀번호가 없다면?
+        elif not password:
+            error = 'Password가 유효하지 않습니다.'
+        # 아이디와 비밀번호가 모두 있다면?
+        elif db.execute(
+            'SELECT id FROM user WHERE username = ?', (username,) # 튜플은 한개일 때 옆에 ,가 붙는다.
+        ).fetchone() is not None:
+            error = '{} 계정은 이미 등록된 계정입니다.'.format(username)
+
+        # 에러가 발생하지 않았다면 회원가입 실행
+        if error is None:
+            db.execute(
+                'INSERT INTO user (username, password) VALUES (?, ?)',
+                (username, generate_password_hash(password))
+            )
+            db.commit()
+            return redirect(url_for('auth.login'))
+        # 에러 메세지를 화면에 나타냅니다. (flashing)
+        flash(error)
+
+    return render_template('auth/register.html')
+
+# 로그인 기능 만들기
+# 사용자가 /auth/login URL로 접속하면 로그인을 할 수 있게끔 만들어야 합니다.
+# 이는 register.py와 비슷한 구조를 가지지만 약간의 차이가 있습니다.
+# /login 주소에서 GET과 POST 메소드 방식의 요청을 모두 받음
+@bp.route('/login', methods=('GET', 'POST'))
+def login():
+    # POST 요청을 받았다면?
+    if request.method == 'POST':
+        username = request.form['username']
+        password = request.form['password']
+        db = get_db()
+        error = None
+        user = db.execute(
+            'SELECT * FROM user WHERE username = ?', (username,)
+        ).fetchone()
+
+        # 입력한 유저의 정보가 없을 때
+        if user is None:
+            error = '등록되지 않은 계정입니다.'
+        elif not check_password_hash(user['password'], password):
+            error = 'password가 틀렸습니다.'
+
+        # 정상적인 정보를 요청받았다면?
+        if error is None:
+            # 로그인을 위해 기존 session을 비웁니다.
+            session.clear()
+            # 지금 로그인한 유저의 정보로 session을 등록합니다.
+            session['user_id'] = user['id']
+            return redirect(url_for('index'))
+
+        flash(error)
+
+    return render_template('auth/login.html')
+
+# 로그인 세션 유지하기
+
+# 이미 로그인을 했다면, 다른 페이지에서도 로그인이 유지되어야 합니다. 이를 “session이 활성화 되었다.” 라고 표현합니다.
+# 웹 애플리케이션의 모든 요청을 받기 전에 실행
+@bp.before_app_request
+def load_logged_in_user():
+    # 현재 session에 등록된 유저의 정보 획득
+    user_id = session.get('user_id')
+
+    # 유저의 정보가 session에 없다면?
+    if user_id is None:
+        g.user = None
+        # 유저의 정보가 session에 있다면?
+    else:
+        g.user = get_db().execute(
+            'SELECT * FROM user WHERE id = ?', (user_id,)
+        ).fetchone()
+
+# 게시글을 생성, 편집 및 삭제하려면 사용자가 반드시 로그인 되어 있어야 합니다. 다음의 코드를 작성하여 이를 확인할 수 있습니다.
+"""
+이 함수는 로그인이 필요한 기능을 사용할 때, 데코레이터로 동작합니다.
+여기서 사용된 functools 패키지와 @functools.wraps() 데코레이터는 지금 이해하기는 너무 어려운 개념이니
+이렇게 사용할 수 있다 정도로만 이해해주시면 됩니다.
+"""
+def login_required(view):
+    # 로그인만 한 사람에게만 보여주는 View에서 동작
+    # 로그인이 되어 있지 않다면 login 페이지로 이동
+    @functools.wraps(view)
+    def wrapped_view(**kwargs):
+        if g.user is None:
+            return redirect(url_for('auth.login'))
+
+        return view(**kwargs)
+
+    return wrapped_view
+
+# 로그아웃 기능 만들기
+# 당연히 로그 아웃 기능도 만들어야겠죠? 이는 session의 저장된 기록을 삭제함으로써 구현할 수 있습니다.
+@bp.route('/logout')
+def logout():
+    # 현재 session을 비워줍니다.
+    session.clear()
+    return redirect(url_for('index'))
+```
+
+> __init__.py
+
+```
+import os
+
+from flask import Flask
+
+
+def create_app(test_config=None):
+    # 웹 애플리케이션을 만들고 설정합니다.
+    
+
+    # Flask 인스턴스를 만듭니다. 
+    app = Flask(__name__, instance_relative_config=True)
+    # __name__은 현재 python 모듈의 이름입니다. 
+    # Flask 앱은 일부 경로를 설정하기 위해 위치를 알아야하며,
+    # __name__을 통해 알려주는 방법은 아주 편리한 방법입니다.
+
+    # instance_relative_config=True 코드는 구성 파일이 인스턴스 폴더에 
+    # 상대적인 위치를 가지고 있다고 앱에 알리는 역할을 합니다.
+    # 인스턴스 폴더는 elice_flask_board 폴더 외부에 있으며 애플리케이션의 보안을 위해 데이터베이스와 같이 
+    # 원격 저장소(Git)에 파일이 커밋되지 않아야하는 로컬 데이터를 저장할 수 있습니다.
+    
+    # Flask 웹 애플리케이션에서 사용할 키와 데이터베이스를 설정합니다.
+    app.config.from_mapping(
+        SECRET_KEY='dev',
+        DATABASE=os.path.join(app.instance_path, 'elice_flask_board.sqlite'),
+    )
+    # SECRET_KEY='dev' 현재 개발 중이라는 표시입니다. 
+    # 나중에 배포시 임의의 값으로 수정되어야 합니다.
+    # DATABASE는 SQLITE3를 사용합니다.
+    
+    if test_config is None:
+        # 테스트를 실행하지 않을 때, 인스턴스의 설정을 불러옵니다.
+        app.config.from_pyfile('config.py', silent=True)
+    else:
+        # 테스트를 실행했을 때
+        app.config.from_mapping(test_config)
+
+    # 인스턴스 폴더가 있는지 확인합니다. 없다면 에러가 발생합니다.
+    try:
+        os.makedirs(app.instance_path)
+    except OSError:
+        pass
+    
+    @app.route('/hello')
+    def hello():
+        return 'Hello, Elice!'
+    
+    
+    # 데이터베이스를 불러옵니다.
+    from . import db
+    db.init_app(app)
+    
+    # auth 블루프린트를 불러옵니다.
+    from . import auth
+    app.register_blueprint(auth.bp)
+
+    return app
+```
+
+> login.html
+
+```
+{% extends 'base.html' %}
+
+{% block header %}
+  <h1>{% block title %}로그인{% endblock %}</h1>
+{% endblock %}
+
+{% block content %}
+  <form method="post">
+    <label for="username">아이디</label>
+    <input name="username" id="username" required>
+    <label for="password">비밀번호</label>
+    <input type="password" name="password" id="password" required>
+    <input type="submit" value="로그인하기">
+  </form>
+{% endblock %}
+```
+
+> register.html
+
+```
+{% extends 'base.html' %}
+
+{% block header %}
+  <h1>{% block title %}회원가입{% endblock %}</h1>
+{% endblock %}
+
+{% block content %}
+  <form method="post">
+    <label for="username">아이디</label>
+    <input name="username" id="username" required>
+    <label for="password">비밀번호</label>
+    <input type="password" name="password" id="password" required>
+    <input type="submit" value="회원가입하기">
+  </form>
+{% endblock %}
+```
+
+
+# 게시판 기능 만들기
+
+> board.py
+
+```
+# 게시판 블루프린트 생성
+
+from flask import (
+    Blueprint, flash, g, redirect, render_template, request, url_for
+)
+from werkzeug.exceptions import abort
+
+# auth 모듈에서 login을 했는지 확인할 수 있는 login_required 함수를 불러옵니다. 
+from elice_flask_board.auth import login_required
+# db 모듈에서 db의 정보를 받아오는 함수인 get_db를 불러옵니다.
+from elice_flask_board.db import get_db
+
+# 게시판 board 블루프린트 생성! 기본값으로 /board URL을 사용합니다.
+bp = Blueprint('board', __name__)
+
+
+
+# 게시글 조회 기능 만들기
+# 사용자가 / URL인 기본 화면에 접속하면 모든 게시글이 보여야합니다.
+# 보여주는 정보는 게시글 제목, 게시글 내용 작성자 정보, 작성한 시간입니다.
+
+# /board URL로 접속시
+@bp.route('/')
+def index():
+    # db의 정보를 가져옵니다.
+    db = get_db()
+
+    # 게시글 정보를 모두 가져오는 query를 실행
+    boards = db.execute(
+        'SELECT p.id, title, body, created, author_id, username'
+        ' FROM board p JOIN user u ON p.author_id = u.id'
+        ' ORDER BY created DESC'
+    ).fetchall() # 게시글을 모두 보여준다
+
+    # board/index.html로 정보를 보냅니다.
+    return render_template('board/index.html', boards=boards) # db에서 가져온 모든 게시글의 정보를 html의 board로 보내 for문 안으로 들어간다.
+
+
+
+# 게시글 작성 기능 만들기
+# 사용자가 게시글을 작성할 수 있는 기능을 만들어야 합니다.
+# 작성하는 정보는 게시글 제목, 게시글 내용입니다.
+
+# /board/create 주소로 접속했을 때, GET과 POST 요청을 모두 받습니다.
+@bp.route('/create', methods=('GET', 'POST'))
+# 로그인이 반드시 되어 있어야 새 게시글을 작성할 수 있도록 설정합니다.
+# auth.py에서 작성한 login_required() 함수를 데코레이터로 호출합니다.
+@login_required
+def create():
+    if request.method == 'POST':
+        title = request.form['title']
+        body = request.form['body']
+        error = None
+
+        if not title:
+            error = '제목이 유효하지 않습니다.'
+
+        if error is not None:
+            flash(error)
+        else:
+            db = get_db()
+            db.execute(
+                'INSERT INTO board (title, body, author_id)'
+                ' VALUES (?, ?, ?)',
+                (title, body, g.user['id'])
+            )
+            db.commit()
+            return redirect(url_for('board.index'))
+
+    return render_template('board/create.html')
+
+
+# 게시글 수정 기능 만들기
+# 이미 작성된 게시글을 수정할 수 있는 기능을 만들어야 합니다.
+# 기본적인 구조는 게시글 작성 기능과 동일하지만, 수정할 수 있는 사람은 작성자 본인이어야 합니다.
+
+# 게시글의 id에 해당하는 정보만을 가져오는 함수
+# check_author는 게시글의 수정을 작성자 본인만이 할 수 있도록 설정합니다.
+def get_board(id, check_author=True):
+    board = get_db().execute(
+        'SELECT p.id, title, body, created, author_id, username'
+        ' FROM board p JOIN user u ON p.author_id = u.id'
+        ' WHERE p.id = ?',
+        (id,)
+    ).fetchone()
+
+    # 게시글의 정보가 존재 하지 않을 때, 404 에러를 발생시킵니다.
+    if board is None:
+        abort(404, "게시글 {0}가 존재하지 않습니다.".format(id))
+
+    # 게시글의 수정은 작성자만이 할 수 있어야 합니다.
+    # 따라서, 현재 session에 등록된 유저가 게시글을 작성했는지 확인합니다.
+    # 여기서 check_author가 False로 변경된다면, 누구나 게시글을 수정할 수 있도록 변경할 수 있습니다.
+    if check_author and board['author_id'] != g.user['id']:
+        abort(403)
+
+    return board
+
+
+# /board/게시글id/update 주소를 받았을 때 동작합니다. GET,POST 요청을 모두 받습니다.
+@bp.route('/<int:id>/update', methods=('GET', 'POST'))
+@login_required
+def update(id):
+    # 전달받은 id에 해당하는 게시글 정보를 가져옵니다.
+    board = get_board(id)
+
+    # POST 요청을 받았다면?
+    if request.method == 'POST':
+        title = request.form['title']
+        body = request.form['body']
+        error = None
+
+        if not title:
+            error = '제목이 유효하지 않습니다.'
+
+        if error is not None:
+            flash(error)
+        else:
+            db = get_db()
+            db.execute(
+                'UPDATE board SET title = ?, body = ?'
+                ' WHERE id = ?',
+                (title, body, id)
+            )
+            db.commit()
+            return redirect(url_for('board.index'))
+
+    return render_template('board/update.html', board=board) 
+
+# 게시글을 생성, 편집 및 삭제하려면 사용자가 반드시 로그인 되어 있어야 합니다. 다음의 코드를 작성하여 이를 확인할 수 있습니다.
+
+
+# 게시글 삭제 기능 만들기 마지막으로 게시글을 삭제하는 기능을 만들어보겠습니다.
+
+# /board/게시글id/delete 주소로 접속했을 때 동작합니다. POST 요청을 받습니다.
+@bp.route('/<int:id>/delete', methods=('POST',))
+@login_required
+def delete(id):
+    get_board(id)
+    db = get_db()
+    db.execute('DELETE FROM board WHERE id = ?', (id,))
+    db.commit()
+    return redirect(url_for('board.index'))
+```
+
+> __init__.py 에 추가할 코드
+
+```
+    from . import board
+    app.register_blueprint(board.bp)
+    app.add_url_rule('/', endpoint='index')
+```
