--- a/Flask/01_20_실시간 강의 정리.md
+++ b/Flask/01_20_실시간 강의 정리.md
@@ -980,3 +980,438 @@ def delete(id):
     app.register_blueprint(board.bp)
     app.add_url_rule('/', endpoint='index')
 ```
+
+
+# 스타일을 입힌 최종 게시판 소스 코드
+
+> style.css
+
+```
+html { font-family: sans-serif; background: #eee; padding: 1rem; }
+body { max-width: 960px; margin: 0 auto; background: white; }
+h1 { font-family: serif; color: #377ba8; margin: 1rem 0; }
+a { color: #377ba8; }
+hr { border: none; border-top: 1px solid lightgray; }
+nav { background: lightgray; display: flex; align-items: center; padding: 0 0.5rem; }
+nav h1 { flex: auto; margin: 0; }
+nav h1 a { text-decoration: none; padding: 0.25rem 0.5rem; }
+nav ul  { display: flex; list-style: none; margin: 0; padding: 0; }
+nav ul li a, nav ul li span, header .action { display: block; padding: 0.5rem; }
+.content { padding: 0 1rem 1rem; }
+.content > header { border-bottom: 1px solid lightgray; display: flex; align-items: flex-end; }
+.content > header h1 { flex: auto; margin: 1rem 0 0.25rem 0; }
+.flash { margin: 1em 0; padding: 1em; background: #cae6f6; border: 1px solid #377ba8; }
+.post > header { display: flex; align-items: flex-end; font-size: 0.85em; }
+.post > header > div:first-of-type { flex: auto; }
+.post > header h1 { font-size: 1.5em; margin-bottom: 0; }
+.post .about { color: slategray; font-style: italic; }
+.post .body { white-space: pre-line; }
+.content:last-child { margin-bottom: 0; }
+.content form { margin: 1em 0; display: flex; flex-direction: column; }
+.content label { font-weight: bold; margin-bottom: 0.5em; }
+.content input, .content textarea { margin-bottom: 1em; }
+.content textarea { min-height: 12em; resize: vertical; }
+input.danger { color: #cc2f2e; }
+input[type=submit] { align-self: start; min-width: 10em; }
+```
+
+> auth.py
+
+```
+import functools
+
+from flask import Blueprint
+from flask import flash
+from flask import g
+from flask import redirect
+from flask import render_template
+from flask import request
+from flask import session
+from flask import url_for
+from werkzeug.security import check_password_hash
+from werkzeug.security import generate_password_hash
+
+from elice_flask_board.db import get_db
+
+# 블루프린트 생성!
+bp = Blueprint("auth", __name__, url_prefix="/auth")
+
+
+# /register 주소에서 GET과 POST 메소드 방식의 요청을 모두 받음
+@bp.route('/register', methods=('GET', 'POST'))
+def register():
+    # POST 요청을 받았다면?
+    if request.method == 'POST':
+        # 아이디와 비밀번호를 폼에서 가져옵니다.
+        username = request.form['username']
+        password = request.form['password']
+        db = get_db()
+        error = None
+
+        # 아이디가 없다면?
+        if not username:
+            error = 'Username이 유효하지 않습니다.'
+        # 비밀번호가 없다면?
+        elif not password:
+            error = 'Password가 유효하지 않습니다.'
+        # 아이디와 비밀번호가 모두 있다면?
+        elif db.execute(
+            'SELECT id FROM user WHERE username = ?', (username,)
+        ).fetchone() is not None:
+            error = '{} 계정은 이미 등록된 계정입니다.'.format(username)
+
+        # 에러가 발생하지 않았다면 회원가입 실행
+        if error is None:
+            db.execute(
+                'INSERT INTO user (username, password) VALUES (?, ?)',
+                (username, generate_password_hash(password))
+            )
+            db.commit()
+            return redirect(url_for('auth.login'))
+        # 에러 메세지를 화면에 나타냅니다. (flashing)
+        flash(error)
+
+    return render_template('auth/register.html')
+
+
+# /login 주소에서 GET과 POST 메소드 방식의 요청을 모두 받음
+@bp.route('/login', methods=('GET', 'POST'))
+def login():
+    # POST 요청을 받았다면?
+    if request.method == 'POST':
+        username = request.form['username']
+        password = request.form['password']
+        db = get_db()
+        error = None
+        user = db.execute(
+            'SELECT * FROM user WHERE username = ?', (username,)
+        ).fetchone()
+
+        # 입력한 유저의 정보가 없을 때
+        if user is None:
+            error = '등록되지 않은 계정입니다.'
+        elif not check_password_hash(user['password'], password):
+            error = 'password가 틀렸습니다.'
+
+        # 정상적인 정보를 요청받았다면?
+        if error is None:
+            # 로그인을 위해 기존 session을 비웁니다.
+            session.clear()
+            # 지금 로그인한 유저의 정보로 session을 등록합니다.
+            session['user_id'] = user['id']
+            return redirect(url_for('index'))
+
+        flash(error)
+
+    return render_template('auth/login.html')
+
+
+# 웹 애플리케이션의 모든 요청을 받기 전에 실행
+@bp.before_app_request
+def load_logged_in_user():
+    # 현재 session에 등록된 유저의 정보 획득
+    user_id = session.get('user_id')
+
+    # 유저의 정보가 session에 있다면?
+    if user_id is None:
+        g.user = None
+        # 유저의 정보가 session에 있다면?
+    else:
+        g.user = get_db().execute(
+            'SELECT * FROM user WHERE id = ?', (user_id,)
+        ).fetchone()
+
+"""
+이 함수는 로그인이 필요한 기능을 사용할 때, 데코레이터로 동작합니다.
+여기서 사용된 functools 패키지와 @functools.wraps() 데코레이터는 지금 이해하기는 너무 어려운 개념이니
+이렇게 사용할 수 있다 정도로만 이해해주시면 됩니다.
+"""
+def login_required(view):
+    # 로그인만 한 사람에게만 보여주는 View에서 동작
+    # 로그인이 되어 있지 않다면 login 페이지로 이동
+    @functools.wraps(view)
+    def wrapped_view(**kwargs):
+        if g.user is None:
+            return redirect(url_for('auth.login'))
+
+        return view(**kwargs)
+
+    return wrapped_view
+
+
+
+@bp.route('/logout')
+def logout():
+    session.clear()
+    return redirect(url_for('index'))
+```
+
+> board.py
+
+```
+from flask import (
+    Blueprint, flash, g, redirect, render_template, request, url_for
+)
+from werkzeug.exceptions import abort
+
+# auth 모듈에서 login을 했는지 확인할 수 있는 login_required 함수를 불러옵니다. 
+from elice_flask_board.auth import login_required
+# db 모듈에서 db의 정보를 받아오는 함수인 get_db를 불러옵니다.
+from elice_flask_board.db import get_db
+
+# 게시판 board 블루프린트 생성! 기본값으로 /board URL을 사용합니다.
+bp = Blueprint('board', __name__)
+
+# /board URL로 접속시
+@bp.route('/')
+def index():
+    # db의 정보를 가져옵니다.
+    db = get_db()
+    
+    # 게시글 정보를 모두 가져오는 query를 실행
+    boards = db.execute(
+        'SELECT p.id, title, body, created, author_id, username'
+        ' FROM board p JOIN user u ON p.author_id = u.id'
+        ' ORDER BY created DESC'
+    ).fetchall()
+    
+    # board/index.html로 정보를 보냅니다.
+    return render_template('board/index.html', boards=boards)
+
+
+# /board/create 주소로 접속했을 때, GET과 POST 요청을 모두 받습니다.
+@bp.route('/create', methods=('GET', 'POST'))
+# 로그인이 반드시 되어 있어야 새 게시글을 작성할 수 있도록 설정합니다.
+# auth.py에서 작성한 login_required() 함수를 데코레이터로 호출합니다.
+@login_required
+def create():
+    if request.method == 'POST':
+        title = request.form['title']
+        body = request.form['body']
+        error = None
+
+        if not title:
+            error = '제목이 유효하지 않습니다.'
+
+        if error is not None:
+            flash(error)
+        else:
+            db = get_db()
+            db.execute(
+                'INSERT INTO board (title, body, author_id)'
+                ' VALUES (?, ?, ?)',
+                (title, body, g.user['id'])
+            )
+            db.commit()
+            return redirect(url_for('board.index'))
+
+    return render_template('board/create.html')
+
+
+# 게시글의 id에 해당하는 정보만을 가져오는 함수
+# check_author는 게시글의 수정을 작성자 본인만이 할 수 있도록 설정합니다.
+def get_board(id, check_author=True):
+    board = get_db().execute(
+        'SELECT p.id, title, body, created, author_id, username'
+        ' FROM board p JOIN user u ON p.author_id = u.id'
+        ' WHERE p.id = ?',
+        (id,)
+    ).fetchone()
+    
+    # 게시글의 정보가 존재 하지 않을 때, 404 에러를 발생시킵니다.
+    if board is None:
+        abort(404, "게시글 {0}가 존재하지 않습니다.".format(id))
+
+    # 게시글의 수정은 작성자만이 할 수 있어야 합니다.
+    # 따라서, 현재 session에 등록된 유저가 게시글을 작성했는지 확인합니다.
+    # 여기서 check_author가 False로 변경된다면, 누구나 게시글을 수정할 수 있도록 변경할 수 있습니다.
+    if check_author and board['author_id'] != g.user['id']:
+        abort(403)
+
+    return board
+
+
+# /board/게시글id/update 주소를 받았을 때 동작합니다. GET,POST 요청을 모두 받습니다.
+@bp.route('/<int:id>/update', methods=('GET', 'POST'))
+@login_required
+def update(id):
+    # 전달받은 id에 해당하는 게시글 정보를 가져옵니다.
+    board = get_board(id)
+    
+    # POST 요청을 받았다면?
+    if request.method == 'POST':
+        title = request.form['title']
+        body = request.form['body']
+        error = None
+
+        if not title:
+            error = '제목이 유효하지 않습니다.'
+
+        if error is not None:
+            flash(error)
+        else:
+            db = get_db()
+            db.execute(
+                'UPDATE board SET title = ?, body = ?'
+                ' WHERE id = ?',
+                (title, body, id)
+            )
+            db.commit()
+            return redirect(url_for('board.index'))
+
+    return render_template('board/update.html', board=board)
+
+
+# /board/게시글id/delete 주소로 접속했을 때 동작합니다. POST 요청을 받습니다.
+@bp.route('/<int:id>/delete', methods=('POST',))
+@login_required
+def delete(id):
+    get_board(id)
+    db = get_db()
+    db.execute('DELETE FROM board WHERE id = ?', (id,))
+    db.commit()
+    return redirect(url_for('board.index'))
+```
+
+> db.py
+
+```
+import sqlite3
+
+import click
+from flask import current_app, g
+from flask.cli import with_appcontext
+
+
+def get_db():
+    # g 객체에 db가 없다면?
+    if 'db' not in g:
+        # sqlite3를 불러옵니다.
+        g.db = sqlite3.connect(
+            # 현재 애플리케이션의 데이터베이스로 설정
+            current_app.config['DATABASE'],
+            # 반환되는 각 row에 대해 선언된 형을 구문분석
+            detect_types=sqlite3.PARSE_DECLTYPES
+        )
+        # 튜플 형식이 아닌 접근하는 데이터를 dictionary 타입과 비슷하게 키-값 쌍으로 사용할 수 있게 해줌
+        g.db.row_factory = sqlite3.Row
+
+    return g.db
+
+
+def close_db(e=None):
+    # 글로벌 객체인 g에서 db를 추출
+    db = g.pop('db', None)
+
+    # db가 있다면 db를 종료
+    if db is not None:
+        db.close()
+
+
+def init_db():
+    db = get_db()
+
+    # schema.sql의 파일을 열어 query를 실행
+    with current_app.open_resource('schema.sql') as f:
+        db.executescript(f.read().decode('utf8'))
+
+
+# init-db 명령어를 shell에서 실행한다면 함수를 실행
+@click.command('init-db')
+@with_appcontext
+def init_db_command():
+    init_db()
+    click.echo('Initialized the database.')
+    
+
+def init_app(app):
+    # HTTP 요청이 완료되면 실행
+    app.teardown_appcontext(close_db)
+         # 새로운 shell 명령어를 추가
+    app.cli.add_command(init_db_command)
+```
+
+> __init__.py
+
+```
+import os
+
+from flask import Flask
+
+
+def create_app(test_config=None):
+    # 웹 애플리케이션을 만들고 설정합니다.
+    
+
+    # Flask 인스턴스를 만듭니다. 
+    app = Flask(__name__, instance_relative_config=True)
+    # __name__은 현재 python 모듈의 이름입니다. 
+    # Flask 앱은 일부 경로를 설정하기 위해 위치를 알아야하며,
+    # __name__을 통해 알려주는 방법은 아주 편리한 방법입니다.
+
+    # instance_relative_config=True 코드는 구성 파일이 인스턴스 폴더에 
+    # 상대적인 위치를 가지고 있다고 앱에 알리는 역할을 합니다.
+    # 인스턴스 폴더는 elice_flask_board 폴더 외부에 있으며 애플리케이션의 보안을 위해 데이터베이스와 같이 
+    # 원격 저장소(Git)에 파일이 커밋되지 않아야하는 로컬 데이터를 저장할 수 있습니다.
+    
+    # Flask 웹 애플리케이션에서 사용할 키와 데이터베이스를 설정합니다.
+    app.config.from_mapping(
+        SECRET_KEY='dev',
+        DATABASE=os.path.join(app.instance_path, 'elice_flask_board.sqlite'),
+    )
+    # SECRET_KEY='dev' 현재 개발 중이라는 표시입니다. 
+    # 나중에 배포시 임의의 값으로 수정되어야 합니다.
+    # DATABASE는 SQLITE3를 사용합니다.
+    
+    if test_config is None:
+        # 테스트를 실행하지 않을 때, 인스턴스의 설정을 불러옵니다.
+        app.config.from_pyfile('config.py', silent=True)
+    else:
+        # 테스트를 실행했을 때
+        app.config.from_mapping(test_config)
+
+    # 인스턴스 폴더가 있는지 확인합니다. 없다면 에러가 발생합니다.
+    try:
+        os.makedirs(app.instance_path)
+    except OSError:
+        pass
+
+    # a simple page that says hello
+    @app.route('/hello')
+    def hello():
+        return 'Hello, World!'
+    
+    from . import db
+    db.init_app(app)
+    
+    from . import auth
+    app.register_blueprint(auth.bp)
+    
+    from . import board
+    app.register_blueprint(board.bp)
+    app.add_url_rule('/', endpoint='index')
+    
+    return app
+```
+
+> schema.sql
+
+```
+DROP TABLE IF EXISTS user;
+DROP TABLE IF EXISTS post;
+
+CREATE TABLE user (
+  id INTEGER PRIMARY KEY AUTOINCREMENT,
+  username TEXT UNIQUE NOT NULL,
+  password TEXT NOT NULL
+);
+
+CREATE TABLE board (
+  id INTEGER PRIMARY KEY AUTOINCREMENT,
+  author_id INTEGER NOT NULL,
+  created TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
+  title TEXT NOT NULL,
+  body TEXT NOT NULL,
+  FOREIGN KEY (author_id) REFERENCES user (id)
+);
+```
